- Correção do texto ao selecionar pra Cancelar que aparece "Seg, 22/12 16:00 \nSegunda-feira, 22/12/2025 16:00", sendo que deveria ser "Segunda-feira, 22/12/2025 16:00"
- Consultar valores e formas de pagamentos dentro do menu principal.