@@ -596,10 +596,16 @@ async def webhook(request: Request):
                     ags = wf.sessoes.get('_lista_agendamentos') or []  # obtém lista salva na sessão
                     items = []  # prepara items
                     for i, (dt, linha) in enumerate(ags):  # formata cada agendamento
-                        # title must be <=24 chars for WhatsApp lists; use abbreviated weekday + date + time
-                        title = f"{_abbr_weekday(dt.weekday())}, {dt.day:02d}/{dt.month:02d} {dt.strftime('%H:%M')}"
-                        # full descriptive text goes into description (can be longer)
-                        desc = f"{_full_weekday(dt.weekday())}, {dt.strftime('%d/%m/%Y %H:%M')} - { (linha[3] or 'Paciente') }"
+                        paciente = (linha[3] or 'Paciente')
+                        full_text = f"{_full_weekday(dt.weekday())}, {dt.strftime('%d/%m/%Y %H:%M')}"
+                        # If full text fits in title limit, show full datetime as title and keep description minimal
+                        if len(full_text) <= 24:
+                            title = full_text
+                            desc = paciente
+                        else:
+                            # Use short title (abbr weekday + date) and put time + patient in description
+                            title = f"{_abbr_weekday(dt.weekday())}, {dt.strftime('%d/%m')}"
+                            desc = f"{dt.strftime('%H:%M')} - {paciente}"
                         items.append((f"{i+1}", title, desc))  # adiciona item com descrição
                     items.append(("0", MSG.LABEL_VOLTA, ""))  # Voltar
                     items.append(("9", MSG.LABEL_CANCEL, ""))  # Cancelar
@@ -608,8 +614,14 @@ async def webhook(request: Request):
                     ags = wf.sessoes.get('_lista_agendamentos_cancelar') or []  # lista de agendamentos específicos para cancelamento
                     items = []  # prepara items
                     for i, (dt, linha) in enumerate(ags):  # formata cada agendamento
-                        title = f"{_abbr_weekday(dt.weekday())}, {dt.day:02d}/{dt.month:02d} {dt.strftime('%H:%M')}"
-                        desc = f"{_full_weekday(dt.weekday())}, {dt.strftime('%d/%m/%Y %H:%M')} - { (linha[3] or 'Paciente') }"
+                        paciente = (linha[3] or 'Paciente')
+                        full_text = f"{_full_weekday(dt.weekday())}, {dt.strftime('%d/%m/%Y %H:%M')}"
+                        if len(full_text) <= 24:
+                            title = full_text
+                            desc = paciente
+                        else:
+                            title = f"{_abbr_weekday(dt.weekday())}, {dt.strftime('%d/%m')}"
+                            desc = f"{dt.strftime('%H:%M')} - {paciente}"
                         items.append((f"{i+1}", title, desc))  # adiciona com descrição
                     items.append(("0", MSG.LABEL_VOLTA, ""))  # Voltar
                     items.append(("9", MSG.LABEL_CANCEL_APPOINTMENT, ""))  # Cancelar Agendamento (rótulo diferenciado)
